[project]
name = "markdown2pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.15.0",
    "pyyaml>=6.0.3",
    "watchdog>=6.0.0",
]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
